# stylus-workshop-proxy-update

./: .gitignore  .gitmodules  README.md
erc20-rust/: Cargo.toml
erc20-rust/.cargo/: config.toml
erc20-rust/src/: erc20.rs  lib.rs  main.rs
erc20-sol/src/: MyToken.sol
proxy/src/: Proxy.sol
scripts/: .env.example  deploy.sh  getBalance.sh  getTokenInformation.sh  mintTokens.sh  updateLogic.sh
