[package]
name = "stylus-workshop-proxy-erc20"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Stylus workshop - Proxy - ERC-20"

[dependencies]
stylus-sdk = "0.5.0"
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
mini-alloc = "0.4.2"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
